# crubit

./: .bazelrc  .gitignore  Cargo.toml  MODULE.bazel  WORKSPACE.bzlmod
.devcontainer/: Dockerfile  devcontainer.json
bazel/protobuf/: rust_dev_dependency_erase.patch
bazel/rules_rust/: attach_rust_bindings_from_cc_aspect_v2.patch
cc_bindings_from_rs/bazel_support/: cc_bindings_from_rust_rule.bzl
common/: BUILD
common/bazel_support/: BUILD
rs_bindings_from_cc/bazel_support/: rust_bindings_from_cc_aspect.bzl  rust_bindings_from_cc_binary.bzl  rust_bindings_from_cc_utils.bzl
